--- a/listcolumn_embed.html
+++ b/listcolumn_embed.html
@@ -60,7 +60,7 @@ tibble(x = c(1,2,3,4,6),
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#ymhyttifuf .gt_table {
+#qdbtrwgyoa .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -85,7 +85,7 @@ tibble(x = c(1,2,3,4,6),
   border-left-color: #D3D3D3;
 }
 
-#ymhyttifuf .gt_heading {
+#qdbtrwgyoa .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -97,7 +97,7 @@ tibble(x = c(1,2,3,4,6),
   border-right-color: #D3D3D3;
 }
 
-#ymhyttifuf .gt_title {
+#qdbtrwgyoa .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -107,7 +107,7 @@ tibble(x = c(1,2,3,4,6),
   border-bottom-width: 0;
 }
 
-#ymhyttifuf .gt_subtitle {
+#qdbtrwgyoa .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -117,13 +117,13 @@ tibble(x = c(1,2,3,4,6),
   border-top-width: 0;
 }
 
-#ymhyttifuf .gt_bottom_border {
+#qdbtrwgyoa .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#ymhyttifuf .gt_col_headings {
+#qdbtrwgyoa .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -138,7 +138,7 @@ tibble(x = c(1,2,3,4,6),
   border-right-color: #D3D3D3;
 }
 
-#ymhyttifuf .gt_col_heading {
+#qdbtrwgyoa .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -158,7 +158,7 @@ tibble(x = c(1,2,3,4,6),
   overflow-x: hidden;
 }
 
-#ymhyttifuf .gt_column_spanner_outer {
+#qdbtrwgyoa .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -170,15 +170,15 @@ tibble(x = c(1,2,3,4,6),
   padding-right: 4px;
 }
 
-#ymhyttifuf .gt_column_spanner_outer:first-child {
+#qdbtrwgyoa .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#ymhyttifuf .gt_column_spanner_outer:last-child {
+#qdbtrwgyoa .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#ymhyttifuf .gt_column_spanner {
+#qdbtrwgyoa .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -190,7 +190,7 @@ tibble(x = c(1,2,3,4,6),
   width: 100%;
 }
 
-#ymhyttifuf .gt_group_heading {
+#qdbtrwgyoa .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -212,7 +212,7 @@ tibble(x = c(1,2,3,4,6),
   vertical-align: middle;
 }
 
-#ymhyttifuf .gt_empty_group_heading {
+#qdbtrwgyoa .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -227,15 +227,15 @@ tibble(x = c(1,2,3,4,6),
   vertical-align: middle;
 }
 
-#ymhyttifuf .gt_from_md > :first-child {
+#qdbtrwgyoa .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#ymhyttifuf .gt_from_md > :last-child {
+#qdbtrwgyoa .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#ymhyttifuf .gt_row {
+#qdbtrwgyoa .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -254,7 +254,7 @@ tibble(x = c(1,2,3,4,6),
   overflow-x: hidden;
 }
 
-#ymhyttifuf .gt_stub {
+#qdbtrwgyoa .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -266,7 +266,7 @@ tibble(x = c(1,2,3,4,6),
   padding-left: 12px;
 }
 
-#ymhyttifuf .gt_summary_row {
+#qdbtrwgyoa .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -276,7 +276,7 @@ tibble(x = c(1,2,3,4,6),
   padding-right: 5px;
 }
 
-#ymhyttifuf .gt_first_summary_row {
+#qdbtrwgyoa .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -286,7 +286,7 @@ tibble(x = c(1,2,3,4,6),
   border-top-color: #D3D3D3;
 }
 
-#ymhyttifuf .gt_grand_summary_row {
+#qdbtrwgyoa .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -296,7 +296,7 @@ tibble(x = c(1,2,3,4,6),
   padding-right: 5px;
 }
 
-#ymhyttifuf .gt_first_grand_summary_row {
+#qdbtrwgyoa .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -306,11 +306,11 @@ tibble(x = c(1,2,3,4,6),
   border-top-color: #D3D3D3;
 }
 
-#ymhyttifuf .gt_striped {
+#qdbtrwgyoa .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#ymhyttifuf .gt_table_body {
+#qdbtrwgyoa .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -319,7 +319,7 @@ tibble(x = c(1,2,3,4,6),
   border-bottom-color: #D3D3D3;
 }
 
-#ymhyttifuf .gt_footnotes {
+#qdbtrwgyoa .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -333,13 +333,13 @@ tibble(x = c(1,2,3,4,6),
   border-right-color: #D3D3D3;
 }
 
-#ymhyttifuf .gt_footnote {
+#qdbtrwgyoa .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#ymhyttifuf .gt_sourcenotes {
+#qdbtrwgyoa .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -353,46 +353,46 @@ tibble(x = c(1,2,3,4,6),
   border-right-color: #D3D3D3;
 }
 
-#ymhyttifuf .gt_sourcenote {
+#qdbtrwgyoa .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#ymhyttifuf .gt_left {
+#qdbtrwgyoa .gt_left {
   text-align: left;
 }
 
-#ymhyttifuf .gt_center {
+#qdbtrwgyoa .gt_center {
   text-align: center;
 }
 
-#ymhyttifuf .gt_right {
+#qdbtrwgyoa .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#ymhyttifuf .gt_font_normal {
+#qdbtrwgyoa .gt_font_normal {
   font-weight: normal;
 }
 
-#ymhyttifuf .gt_font_bold {
+#qdbtrwgyoa .gt_font_bold {
   font-weight: bold;
 }
 
-#ymhyttifuf .gt_font_italic {
+#qdbtrwgyoa .gt_font_italic {
   font-style: italic;
 }
 
-#ymhyttifuf .gt_super {
+#qdbtrwgyoa .gt_super {
   font-size: 65%;
 }
 
-#ymhyttifuf .gt_footnote_marks {
+#qdbtrwgyoa .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="ymhyttifuf" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="qdbtrwgyoa" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   
   <thead class="gt_col_headings">
     <tr>
@@ -503,8 +503,8 @@ tibble(x = c(1,2,3,4,6),
 ]
  
 .panel2-the_chunk-replace[
-<div id="htmlwidget-604ca878ac8758f3937b" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-604ca878ac8758f3937b">{"x":{"filter":"none","data":[["1","2","3","4","5"],[1,2,3,4,6],[1,2,3,4,5],[[1,2],[4,5],8,null,[1,7,9,0]]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>x<\/th>\n      <th>y<\/th>\n      <th>z<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":[1,2]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-b458f0ff831b61739196" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-b458f0ff831b61739196">{"x":{"filter":"none","data":[["1","2","3","4","5"],[1,2,3,4,6],[1,2,3,4,5],[[1,2],[4,5],8,null,[1,7,9,0]]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>x<\/th>\n      <th>y<\/th>\n      <th>z<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":[1,2]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 ]
 
 ---
@@ -523,8 +523,8 @@ tibble(x = c(1,2,3,4,6),
 ]
  
 .panel2-the_chunk-replace[
-<div id="htmlwidget-68e5d43b65ef54064067" class="reactable html-widget" style="width:auto;height:auto;"></div>
-<script type="application/json" data-for="htmlwidget-68e5d43b65ef54064067">{"x":{"tag":{"name":"Reactable","attribs":{"data":{"x":[1,2,3,4,6],"y":[1,2,3,4,5],"z":[[1,2],[4,5],[8],[null],[1,7,9,0]]},"columns":[{"accessor":"x","name":"x","type":"numeric"},{"accessor":"y","name":"y","type":"numeric"},{"accessor":"z","name":"z","type":"list"}],"defaultPageSize":10,"paginationType":"numbers","showPageInfo":true,"minRows":1,"dataKey":"f24d0ab9097dafede728943714af6fa0","key":"f24d0ab9097dafede728943714af6fa0"},"children":[]},"class":"reactR_markup"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-86384ee0e5075da57c5f" class="reactable html-widget" style="width:auto;height:auto;"></div>
+<script type="application/json" data-for="htmlwidget-86384ee0e5075da57c5f">{"x":{"tag":{"name":"Reactable","attribs":{"data":{"x":[1,2,3,4,6],"y":[1,2,3,4,5],"z":[[1,2],[4,5],[8],[null],[1,7,9,0]]},"columns":[{"accessor":"x","name":"x","type":"numeric"},{"accessor":"y","name":"y","type":"numeric"},{"accessor":"z","name":"z","type":"list"}],"defaultPageSize":10,"paginationType":"numbers","showPageInfo":true,"minRows":1,"dataKey":"f24d0ab9097dafede728943714af6fa0","key":"f24d0ab9097dafede728943714af6fa0"},"children":[]},"class":"reactR_markup"},"evals":[],"jsHooks":[]}</script>
 ]
 
 &lt;style&gt;
